se han subido cambios

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,35 +1,32 @@
 FROM python:3.11-slim-bullseye
 
-#Establecer variables de entorno
+# Establecer variables de entorno
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-#ESTABLECER DIRECTORIO DE TRABAJO
+# Establecer directorio de trabajo
 WORKDIR /app
 
-#INSTALAR LAS DEPENDENCIAS DEL SISTEMA
+# Instalar dependencias del sistema
 RUN apt-get update && apt-get install -y \
     netcat-openbsd \
     gcc \
     libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
+# Copiar requirements e instalar dependencias de Python
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-# Copiar requirements e isntalar las dependencias de python
-
-COPY requeriments.txt .
-RUN pip install --no-cache-dir -r requeriments.txt
-
-
-#copiar wait-for-it.sh y dar permisos de ejecucion
+# Copiar wait-for-it.sh y dar permisos de ejecución
 COPY wait-for-it.sh /wait-for-it.sh
 RUN chmod +x /wait-for-it.sh
 
-#copiar resto del proyecto
+# Copiar el proyecto
 COPY . .
 
-#EXPONER PUERTO
-EXPOSE 8080
+# Exponer puerto
+EXPOSE 8000
 
-# COMANDO PARA EJECUTAR LA APLICACION
+# Comando para ejecutar la aplicación
 CMD ["/wait-for-it.sh", "db:5432", "--", "python", "manage.py", "runserver", "0.0.0.0:8000"]
