--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,8 @@
-version: '3.8'
-
+version: "3.8"
 
 services:
-  # Base de datos PostgreSQL
   db:
-    image: postgres:13-alpine
+    image: postgres:14-alpine
     environment:
       POSTGRES_DB: login_db
       POSTGRES_USER: postgres
@@ -13,29 +11,36 @@ services:
       - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d login_db"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     networks:
       - app-network
 
-  # Backend Django
   backend:
     build: ./backend
+    container_name: django_backend
     command: >
-      sh -c "/wait-for-it.sh db:5432 -- 
+      sh -c "echo 'Waiting for PostgreSQL...' &&
+      /wait-for-it.sh db:5432 --timeout=30 -- 
+      echo 'Running migrations...' &&
       python manage.py migrate &&
+      echo 'Starting server...' &&
       python manage.py runserver 0.0.0.0:8000"
-    environment:
-      - DATABASE_URL=postgresql://postgres:developer@db:5432/login_db
-      - DEBUG=1
+    env_file:
+      - .env
     volumes:
       - ./backend:/app
     ports:
       - "8000:8000"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     networks:
       - app-network
 
-  # Frontend React
   frontend:
     build: ./frontend
     ports:
